[package]
name = "kvsys"
version = "0.1.0"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"

[lib]
name = "kvsys"

[[bin]]
name = "kvserver"

[[test]]
name = "kvstorage_tests"
path = "tests/kvstorage/mod.rs"

[dependencies]
tempfile = "3"
rand = "0.7.0"
clap = "2.33.0"
log = "0.4"
threads_pool = "0.2.2"