[package]
name = "kvsys"
version = "0.1.0"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"

[lib]
name = "kvsys"

[[bin]]
name = "kvserver"

[[bin]]
name = "kvclient"

[[bin]]
name = "gen_bigdata"

[[test]]
name = "kvstorage_tests"
path = "tests/kvstorage/mod.rs"

[[test]]
name = "kvserver_tests"
path = "tests/kvserver/mod.rs"

[[bench]]
name = "kvstorage_benches"
path = "benches/kvstorage/mod.rs"

[dependencies]
tempfile = "3"
rand = "0.7.0"
clap = "2.33.0"
log = "0.4"
env_logger = "0.6.2"

# This library is proved to be bullshit
# criterion = "0.2.11"
# -- However, libtest is another piece of bullshit

# This library is proved to be bullshit
# threads_pool = "0.2.2"